--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -5,14 +5,47 @@ body {
 
 h1 {
   text-align: center;
+  z-index: 100;
+  font-weight: bolder;
 }
 
-/* #header {
-  padding: 25px;
-  margin: 5px;
-  display: block;
+#header {
+}
 
-} */
+.heart {
+  z-index:-1;
+  position: absolute;
+  margin: 2rem 46%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: red;
+  height: 50px;
+  width: 50px;
+  transform: rotate(-45deg); ;
+}
+.heart::after {
+  background-color: red;
+  content: "";
+  border-radius: 50%;
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  top: 0px;
+  left: 25px;
+  z-index: -1;
+}
+.heart::before {
+  content:"";
+  background-color: red;
+  border-radius: 50%;
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  top: -25px;
+  left: 0px;
+}
 
 .card {
   position: relative;
@@ -63,15 +96,21 @@ h1 {
 
 #new-contact-form {
   display: grid;
-  
+
   /* align-items: center; */
-  
-  
 }
 
 #new-contact-form label {
   font-weight: bold;
   margin-right: 1rem;
+  background-color: rgb(236, 161, 22);
+  width: fit-content;
+  color: white;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+
+  padding: 0.25rem 0.5rem;
+  margin: 0.5rem;
 }
 
 #name {
@@ -80,6 +119,7 @@ h1 {
   border: 1px solid #ccc;
   font: inherit;
   padding-left: 0.5rem;
+  border-color: black;
 }
 
 #email {
@@ -132,9 +172,8 @@ h1 {
   border-radius: 20px;
   font-weight: bold;
   width: 10rem;
-  
+
   margin-top: 1rem;
-  
 }
 
 #submit:hover,
@@ -145,4 +184,11 @@ h1 {
 
 #contact-list {
   display: flex;
+  font-weight: bold;
+  color: white;
+  background-color: #8a2b06;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  margin-top: 1rem;
+  font-family: cursive;
 }
